# cudaqx

./: .clang-format  .cudaq_realtime_version  .cudaq_version  .git-blame-ignore-revs  .gitignore  .style.yapf  Building.md  CITATION.cff  CMakeLists.txt  Contributing.md  Contributor_License_Agreement.md  LICENSE  NOTICE  README.md
docs/: CMakeLists.txt  Doxyfile.in  README.md  autonomous_decoder_guide.md  host_side_dispatcher_design_gemini.md  hybrid_ai_predecoder_pipeline.md  realtime_pipeline_architecture.md  test_predecoder_setup_guide.md
docs/sphinx/: conf.py.in  index.rst
docs/sphinx/api/core/: cpp_api.rst
docs/sphinx/api/qec/: cpp_api.rst  cpp_realtime_decoding_api.rst  nv_qldpc_decoder_api.rst  python_api.rst  python_realtime_decoding_api.rst  realtime_pipeline_api.rst  sliding_window_api.rst  tensor_network_decoder_api.rst  trt_decoder_api.rst
docs/sphinx/api/solvers/: cpp_api.rst  gqe_api.rst  python_api.rst
docs/sphinx/components/qec/: introduction.rst
docs/sphinx/components/solvers/: introduction.rst
docs/sphinx/examples_rst/qec/: circuit_level_noise.rst  code_capacity_noise.rst  decoders.rst  examples.rst  realtime_decoding.rst  realtime_predecoder_fpga.rst  realtime_predecoder_pymatching.rst  realtime_relay_bp.rst  stim_dem_decoder.rst  training_ai_decoders.rst
docs/sphinx/examples_rst/solvers/: adapt.rst  examples.rst  gqe.rst  molecular_hamiltonians.rst  qaoa.rst  vqe.rst
docs/sphinx/quickstart/: installation.rst
libs/core/: CMakeLists.txt
libs/core/lib/: CMakeLists.txt  graph.cpp  tear_down.cpp
libs/core/lib/tensor_impls/: xtensor_impl.cpp
libs/core/python/: _system_dep_check.py
libs/core/unittests/: CMakeLists.txt  test_core.cpp
libs/qec/: CMakeLists.txt  LICENSE  README.md  pyproject.toml  pyproject.toml.cu12  pyproject.toml.cu13
libs/qec/lib/: CMakeLists.txt  code.cpp  decoder.cpp  decoder_config_payload.cpp  decoder_config_payload_provider.cpp  detector_error_model.cpp  experiments.cpp  hardware_guards.h  logger.cpp  logger_forwarder.cpp  logger_forwarder.h  pcm_utils.cpp  plugin_loader.cpp  sparse_binary_matrix.cpp  stabilizer_utils.cpp  version.cpp.in
libs/qec/lib/codes/: CMakeLists.txt  repetition.cpp  repetition_device.cpp  steane.cpp  steane_device.cpp  surface_code.cpp  surface_code_device.cpp
libs/qec/lib/decoders/: lut.cpp  single_error_lut.cpp  sliding_window.cpp  sliding_window.h
libs/qec/lib/dem_sampling/: dem_sampling_gpu.cpp  dem_sampling_utils.cu  dem_sampling_utils.h
libs/qec/lib/device/: CMakeLists.txt  memory_circuit.cpp  memory_circuit.h
libs/qec/lib/persistent_ai_decoder/: CMakeLists.txt  persistent_ai_decoder.cu
libs/qec/lib/realtime/: CMakeLists.txt  ai_decoder_service.cu  ai_predecoder_service.cu  config.cpp  gpu_kernels.cu  graph_resources.cu  host_dispatcher.cpp  host_side_dispatcher_design.md  mock_decode_handler.cu  mock_decoder_launch_params.cpp  qec_realtime_session.cpp  qec_realtime_session.h  realtime_decoding.cpp  realtime_decoding.h  realtime_pipeline.cu  realtime_pipeline_architecture.md  rpc_producer.cpp  rpc_producer.h  test_realtime_predecoder_w_pymatching.cpp
libs/qec/lib/utils/: CMakeLists.txt  cuda_graph_utils.cpp
libs/qec/python/: CMakeLists.txt
libs/qec/python/bindings/: cudaqx_qec.cpp  py_code.cpp  py_code.h  py_decoder.cpp  py_decoder.h  py_decoding.cpp  py_decoding.h  py_decoding_config.cpp  py_decoding_config.h  py_dem_sampling.cpp  py_dem_sampling.h  py_patch.cpp  py_patch.h  py_surface_code.cpp  py_surface_code.h  type_casters.h  utils.h
libs/qec/python/cudaq_qec/: __init__.py  dem_sampling.py  loader.py  patch.py
libs/qec/python/metapackages/: README.md  pyproject.toml  setup.py
libs/qec/python/tests/: test_chromobius.py  test_code.py  test_composite_decoder.py  test_decoder.py  test_decoders_yaml.py  test_decoding_config.py  test_dem.py  test_dem_sampling.py  test_device_call.py  test_nm_optimizer.py  test_realtime_decoding_negative.py  test_sliding_window.py  test_surface_code.py  test_tensor_network_decoder.py  test_tensor_network_decoder_negative.py  test_trt_decoder.py
libs/qec/test_data/chromobius/: README.md  basic_reference.dem  basic_reference.tsv
libs/qec/tools/: CMakeLists.txt
libs/qec/tools/decoding-server/: CMakeLists.txt  decoding_server.cpp  decoding_server_config.yaml  decoding_server_config_multi_error_lut.yaml
libs/qec/unittests/: CMakeLists.txt  check_dependency_closure.cmake  test_ai_decoder_quantized_onnx.cpp  test_ai_decoder_quantized_onnx.cu  test_decoders.cpp  test_decoders_yaml.cpp  test_decoding_server_core.cpp  test_dem_sampling.cpp  test_logger.cpp  test_qec.cpp  test_realtime_pipeline.cu  test_sparse_binary_matrix.cpp  test_trt_decoder.cpp
libs/qec/unittests/backend-specific/: CMakeLists.txt
libs/qec/unittests/decoders/: sample_decoder.cpp
libs/qec/unittests/realtime/: CMakeLists.txt  generate_ai_decoder_quantized_onnx.py  hololink_predecoder_bridge.cpp  hololink_predecoder_test.sh  mock_decode_handler.cu  mock_decode_handler.cuh  mock_decode_setup.h  mock_decoder_launch_params.cpp  predecoder_pipeline_common.cpp  predecoder_pipeline_common.h  test_decoding_server.cpp  test_realtime_predecoder_w_pymatching.cpp  (+1 more)
libs/qec/utils/: replay_decoder_logs.py
libs/solvers/: CITATION.cff  CMakeLists.txt  README.md  pyproject.toml  pyproject.toml.cu12  pyproject.toml.cu13
libs/solvers/lib/: CMakeLists.txt  quantum_exact_lanczos.cpp  version.cpp.in
libs/solvers/python/: CMakeLists.txt
libs/solvers/tools/: CMakeLists.txt
libs/solvers/unittests/: CMakeLists.txt  test_adapt.cpp  test_adapt_mpi.cpp  test_block_encoding.cpp  test_bravyi_kitaev.cpp  test_ceo_operator_pool.cpp  test_molecule.cpp  test_operator_pools.cpp  test_optimizers.cpp  test_qaoa.cpp  test_qsvt.cpp  test_quantum_exact_lanczos.cpp  test_qubitization.cpp  test_skqd.cpp  test_trotter.cpp  test_uccgsd_operator_pool.cpp  test_uccsd.cpp  test_upccgsd_operator_pool.cpp  test_vqe.cpp
realtime/lib/pipeline/: CMakeLists.txt  realtime_pipeline.cu
reproducer/: CMakeLists.txt  README.md  REPRODUCER_SUMMARY.md  build.sh  run.sh  trt_device_launch_test.cpp
(+424 files in other folders)
